# app-reference-26

./: .gitignore  AGENTS.md  README.md  start-avcdt-agent-one.sh
go-le/: go.mod  (+9 more)
mojo-gobi/: .gitignore  .manifest.ai  THREAD_SAFETY_SUMMARY.md  _done.md  _journal.md  args.py  client.py  daemon  daemon.mojo  debug_parser  gobi  gobi.py  interop.py  job_scheduler_demo  job_scheduler_demo.mojo  main  main.mojo  merkle_timeline  pylock.toml  pyproject.toml  requirements.txt  setup.py  simple_test.mojo  template.json  test.mojo  test_arrow.sh  test_compile  test_embedded.mojo  test_file_reading.sql  test_http_integration.py  test_init.mojo  test_jit.mojo  test_lakewal.mojo  test_module_system.mojo  test_modules.mojo  test_proc.sql  test_simple.mojo  transformation_staging
mojo-gobi/.agents/: _do.md  _done.md  _idea.md  _journal.md  _log.md  _mischievous.md  _pl_grizzly_examples.md  _plan.md  _plan_simplified.md  merkle_integration_analysis.md  merkle_tree_design.md
mojo-gobi/benchmark/: README.md
mojo-gobi/benchmark_reports/: performance_report_1768283184.2429636.md
mojo-gobi/d/: 20240113-Compilation-Errors-Resolution.md  20241201-lakewal-embedded-storage.md  20241201-lakewal-simplification.md  20260110-CLI-Implementation.md  20260110-CRUD-Implementation.md  20260110-Compaction-Optimization.md  20260110-DataFrame-Integrity-Fix.md  20260110-Environment-Inheritance-Config.md  20260110-Incremental-Materialization.md  20260110-ORC-Storage-Compression-Pandas-Removal.md  20260110-PL-GRIZZLY-lexer.md  20260110-PL-GRIZZLY-parser.md  20260110-PyArrow-Filesystem-Integration.md  (+35 more)
(+933 files in other folders)
